--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Students Index Page</h1>
 <%@students.each do |student|%>
-<p><%=student.name%></p>
+<p><%=student.to_s%></p>
 ~~~~~~~~~~~~~~~~~~~~~~~~
 <%end%>
